--- a/index.html
+++ b/index.html
@@ -45,28 +45,42 @@
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>AuronPlay</td>
-                    <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/tiktok-live-follower-counter/auronplay style="border: 0; width:300px; height:80px;"></iframe></td>
-                    <td>Youtube</td>
-                    <td>Twitch</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
                     <td>Ibai</td>
                     <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/tiktok-live-follower-counter/ibaillanos style="border: 0; width:300px; height:80px;"></iframe></td>
                     <td>Youtube</td>
                     <td>Twitch</td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
+                    <th scope="row">3</th>
+                    <td>AuronPlay</td>
+                    <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/tiktok-live-follower-counter/auronplay style="border: 0; width:300px; height:80px;"></iframe></td>
+                    <td>Youtube</td>
+                    <td>Twitch</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
                     <td>Pelirojo</td>
                     <td>TikTok</td>
                     <td>Youtube</td>
                     <td>Twitch</td>
                 </tr>
                 <tr>
-                    <th scope="row">2</th>
+                    <th scope="row">5</th>
                     <td>La Mejor Clase</td>
+                    <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/tiktok-live-follower-counter/lamejorclaseyt style="border: 0; width:300px; height:80px;"></iframe></td>
+                    <td>Youtube</td>
+                    <td>Twitch</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Knekro</td>
+                    <td>TikTok</td>
+                    <td>Youtube</td>
+                    <td>Twitch</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>Susyrox</td>
                     <td>TikTok</td>
                     <td>Youtube</td>
                     <td>Twitch</td>
