--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                 </tr>
                 <tr>
                     <th scope="row">4</th>
-                    <td>Pelirojo</td>
-                    <td>TikTok</td>
-                    <td>Youtube</td>
+                    <td>Zyrpes</td>
+                    <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/tiktok-live-follower-counter/zyrpesland style="border: 0; width:300px; height:80px;"></iframe></td>
+                    <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/youtube-live-subscriber-counter/UCN8UZeyM7dpMbpSQehSpMNQ style="border: 0; width:300px; height:80px;"></iframe></td>
                     <td>Twitch</td>
                 </tr>
                 <tr>
