--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <td>Zyrpes</td>
                     <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/tiktok-live-follower-counter/zyrpesland style="border: 0; width:300px; height:80px;"></iframe></td>
                     <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/youtube-live-subscriber-counter/UCN8UZeyM7dpMbpSQehSpMNQ style="border: 0; width:300px; height:80px;"></iframe></td>
-                    <td>Twitch</td>
+                    <td><iframe height="80px" width="300px" frameborder="0" src=https://livecounts.io/embed/twitch-live-follower-counter/zyrpesland style="border: 0; width:300px; height:80px;"></iframe></td>
                 </tr>
                 <tr>
                     <th scope="row">5</th>
