fix: align center talbe and reduce table

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h1 class="h1Titulo">TOP Streamers</h1>
 
     <div class="iframeFollowers">
-        <table class="table table-bordered border-primary text-light">
+        <table class="table-bordered border-primary text-light">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -80,8 +80,10 @@
                                 
                             </tbody>
         </table>
+    </div>
+    <div>
         <h2 class="h1Titulo">Tablet or Desktop View</h2>
-        <table class="table table-bordered border-primary text-light">
+        <table class="table-bordered border-primary text-light">
             <thead>
                 <tr>
                     <th scope="col">#</th>
