--- a/index.html
+++ b/index.html
@@ -20,37 +20,10 @@
 
     <!-- <div class="iframeFollowers">
         <table class="table-bordered border-primary text-light">
-            <thead>
-                <tr>
-                    <th scope="col">Name</th>
-                    <th scope="col">TikTok</th>
-                </tr>
-            </thead>
+
             <tbody>
 
-                <tr>
 
-                    <td>Ibai</td>
-                    <td><iframe height="80px" width="300px" frameborder="0"
-                            src=https://livecounts.io/embed/tiktok-live-follower-counter/ibaillanos
-                            style="border: 0; width:300px; height:80px;"></iframe></td>
-
-                </tr>
-                <tr>
-
-                    <td>AuronPlay</td>
-                    <td><iframe height="80px" width="300px" frameborder="0"
-                            src=https://livecounts.io/embed/tiktok-live-follower-counter/auronplay
-                            style="border: 0; width:300px; height:80px;"></iframe></td>
-
-                </tr>
-                <tr>
-
-                    <td>Zyrpes</td>
-                    <td><iframe height="80px" width="300px" frameborder="0"
-                            src=https://livecounts.io/embed/tiktok-live-follower-counter/zyrpesland
-                            style="border: 0; width:300px; height:80px;"></iframe></td>
-                </tr>
                 <tr>
 
                     <td>La Mejor Clase</td>
@@ -98,8 +71,8 @@
             <a href="https://countik.com/es/user/jmgranabuab" target="_blank" class="pow-countik"
                 style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
                 Countik™</a>
-
         </div>
+
         <div class="boxStreamer">
             <div id="countik-widgetibaillanos"></div>
             <script>
@@ -122,6 +95,58 @@
                 })();
             </script>
             <a href="https://countik.com/es/user/ibaillanos" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
+        </div>
+        <div class="boxStreamer">
+            <div id="countik-widgetauronplay"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetauronplay',
+                                themeColor: '#444444',
+                                uniqueId: 'auronplay',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/auronplay" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
+
+        </div>
+
+        <div class="boxStreamer">
+            <div id="countik-widgetzyrpesland"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetzyrpesland',
+                                themeColor: '#444444',
+                                uniqueId: 'zyrpesland',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/zyrpesland" target="_blank" class="pow-countik"
                 style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
                 Countik™</a>
 
