--- a/index.html
+++ b/index.html
@@ -47,31 +47,6 @@
     </div> -->
 
     <div class="iframeFollowers">
-        <div class="boxStreamer">
-            <div id="countik-widgetjmgranabuab"></div>
-            <script>
-                (function () {
-                    var countikWidget = document.createElement('script');
-                    countikWidget.src = 'https://countik.com/widget.js';
-                    countikWidget.async = true;
-                    countikWidget.onload = function () {
-                        if (typeof window.initializeCountikWidget === 'function') {
-                            window.initializeCountikWidget({
-                                container: '#countik-widgetjmgranabuab',
-                                themeColor: '#444444',
-                                uniqueId: 'jmgranabuab',
-                                language: 'es'
-                            });
-                        }
-                    };
-                    var firstScript = document.getElementsByTagName('script')[0];
-                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
-                })();
-            </script>
-            <a href="https://countik.com/es/user/jmgranabuab" target="_blank" class="pow-countik"
-                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
-                Countik™</a>
-        </div>
 
         <div class="boxStreamer">
             <div id="countik-widgetibaillanos"></div>
@@ -150,6 +125,84 @@
                 style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
                 Countik™</a>
 
+        </div>
+
+        <div class="boxStreamer">
+            <div id="countik-widgetlamejorclaseyt"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetlamejorclaseyt',
+                                themeColor: '#444444',
+                                uniqueId: 'lamejorclaseyt',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/lamejorclaseyt" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
+
+        </div>
+
+        <div class="boxStreamer">
+            <div id="countik-widgetpuertaracing"></div>
+            <script>
+              (function() {
+                var countikWidget = document.createElement('script');
+                countikWidget.src = 'https://countik.com/widget.js';
+                countikWidget.async = true;
+                countikWidget.onload = function() {
+                  if (typeof window.initializeCountikWidget === 'function') {
+                    window.initializeCountikWidget({
+                      container: '#countik-widgetpuertaracing',
+                      themeColor: '#444444',
+                      uniqueId: 'puertaracing',
+                      language: 'es'
+                    });
+                  }
+                };
+                var firstScript = document.getElementsByTagName('script')[0];
+                firstScript.parentNode.insertBefore(countikWidget, firstScript);
+              })();
+            </script>
+            <a href="https://countik.com/es/user/puertaracing" target="_blank" class="pow-countik" style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por Countik™</a>
+          
+        </div>
+
+        <div class="boxStreamer">
+            <div id="countik-widgetjmgranabuab"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetjmgranabuab',
+                                themeColor: '#444444',
+                                uniqueId: 'jmgranabuab',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/jmgranabuab" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
         </div>
     </div>
 
