--- a/index.html
+++ b/index.html
@@ -46,6 +46,31 @@
                 Countik™</a>
         </div>
         <div class="boxStreamer">
+            <div id="countik-widgetrubius"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetrubius',
+                                themeColor: '#444444',
+                                uniqueId: 'rubius',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/rubius" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
+        </div>
+        <div class="boxStreamer">
             <div id="countik-widgetauronplay"></div>
             <script>
                 (function () {
@@ -71,6 +96,7 @@
                 Countik™</a>
 
         </div>
+        
 
         <div class="boxStreamer">
             <div id="countik-widgetzyrpesland"></div>
