fix: number 2 and 3 only in 1 line

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
                 Countik™</a>
         </div>
     </div>
-
+    
     <div class="iframeFollowers">
-
-
         <!-- thegrefg -->
         <div class="boxStreamer">
             <div id="countik-widgetthegrefg"></div>
@@ -103,7 +101,9 @@
                 style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
                 Countik™</a>
         </div>
+    </div>
 
+    <div class="iframeFollowers">
         <!-- elxokas -->
         <div class="boxStreamer">
             <div id="countik-widgetelxokas"></div>
