feat: add illojuan

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 Countik™</a>
         </div>
     </div>
-    
+
     <div class="iframeFollowers">
         <!-- thegrefg -->
         <div class="boxStreamer">
@@ -181,6 +181,33 @@
                 })();
             </script>
             <a href="https://countik.com/es/user/zyrpesland" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
+        </div>
+
+        <!-- illojuan -->
+        <div class="boxStreamer">
+            <div id="countik-widgetillojuan"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetillojuan',
+                                themeColor: '#444444',
+                                uniqueId: 'illojuan',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/illojuan" target="_blank" class="pow-countik"
                 style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
                 Countik™</a>
         </div>
