--- a/index.html
+++ b/index.html
@@ -210,6 +210,33 @@
                 Countik™</a>
         </div>
 
+        <!-- knekro_ -->
+        <div class="boxStreamer">
+            <div id="countik-widgetknekro_"></div>
+            <script>
+                (function () {
+                    var countikWidget = document.createElement('script');
+                    countikWidget.src = 'https://countik.com/widget.js';
+                    countikWidget.async = true;
+                    countikWidget.onload = function () {
+                        if (typeof window.initializeCountikWidget === 'function') {
+                            window.initializeCountikWidget({
+                                container: '#countik-widgetknekro_',
+                                themeColor: '#444444',
+                                uniqueId: 'knekro_',
+                                language: 'es'
+                            });
+                        }
+                    };
+                    var firstScript = document.getElementsByTagName('script')[0];
+                    firstScript.parentNode.insertBefore(countikWidget, firstScript);
+                })();
+            </script>
+            <a href="https://countik.com/es/user/knekro_" target="_blank" class="pow-countik"
+                style="font-size:11px;color:#333;display:block;padding:4px 3px;text-decoration:none;">Impulsado por
+                Countik™</a>
+        </div>
+
         <!-- lamejorclaseyt -->
         <div class="boxStreamer">
             <div id="countik-widgetlamejorclaseyt"></div>
